cluster-monitor/configs/iptables.rules
# Generated by iptables-save v1.4.14 on Mon Jul 28 16:40:56 2014
*nat
:PREROUTING ACCEPT [1:126]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [1:60]
:POSTROUTING ACCEPT [1:60]
COMMIT
# Completed on Mon Jul 28 16:40:56 2014
# Generated by iptables-save v1.4.14 on Mon Jul 28 16:40:56 2014
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [2844:1898613]
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -p udp -m udp --dport 8125 -j ACCEPT
-A INPUT -j DROP
COMMIT
# Completed on Mon Jul 28 16:40:56 2014
